# reliability_lib

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  main.c  prg_eeprom_ftdi.bat  sys_main.c
platform/: platform_config.h
platform/adapter/: adapter_target.h  init_platform_adapter.c  init_platform_adapter.h  io_platform_adapter.c  io_platform_adapter.h  platform_adapter.c  platform_adapter.h
platform/mk32_baremetal/runtime/: crt0.S
platform/mk32_baremetal/scripts/: mik32.cfg  spifi.ld
platform/mk32_baremetal/src/: mk32_system.c  mk32_system.h  sys_main.c
platform/qemu/: qemu_project.ld  qemu_riscv_uart.c  qemu_riscv_uart.h  run_qemu.sh  startup.s
scripts/: ram.ld
snippets/: assert_snippet.c  assert_snippet.h  snippets_suit.c  snippets_suit.h
snippets/design_diversity/: n_version_snippet.c  n_version_snippet.h  n_version_t_snippet.c  n_version_t_snippet.h  recovery_block_snippet.c  recovery_block_snippet.h
snippets/single_design/: assertion_snippet.c  assertion_snippet.h  cfc_monitor_snippet.c  cfc_monitor_snippet.h  checkpoint_restart_snippet.c  checkpoint_restart_snippet.h  checksum_snippet.c  checksum_snippet.h  data_diversity_snippet.c  data_diversity_snippet.h  data_property_checker_snippet.c  data_property_checker_snippet.h  deadline_monitor_snippet.c  deadline_monitor_snippet.h  exception_handler_snippet.c  exception_handler_snippet.h  input_validator_snippet.c  input_validator_snippet.h  process_pair_active_snippet.c  process_pair_active_snippet.h  process_pair_passive_snippet.c  process_pair_passive_snippet.h  process_pair_snippet.c  process_pair_snippet.h  redundant_execution_snippet.c  redundant_execution_snippet.h  system_behavior_monitor_snippet.c  system_behavior_monitor_snippet.h
src/: main.c  mk32_system.c
tools/: tools_config.h
tools/error_monitor/: error_monitor.c  error_monitor.h
tools/reability_evaluation_models/discrete/: la_padula.c  la_padula.h  shuman.c  shuman_based.c  shuman_based.h
tools/reability_evaluation_models/static/: nelson_corcoran.c
tools/reability_mechanisms/error_detection/: improved_assertion.c  improved_assertion.h
tools/reliability_evaluation_models/: reliability_metrics.c  reliability_metrics.h
tools/reliability_evaluation_models/continuous/: jm.c  jm.h  musa.c  musa.h  shick_wolverton.c  shick_wolverton.h
tools/reliability_evaluation_models/discrete/: la_padula.c  la_padula.h  shuman.c  shuman.h  shuman_based.c  shuman_based.h  tests_model.c  tests_model.h
tools/reliability_evaluation_models/static/: nelson_corcoran.c  nelson_corcoran.h
tools/reliability_mechanisms/design_diversity/: n_version.c  n_version.h  recovery_block.c  recovery_block.h
tools/reliability_mechanisms/error_detection/: improved_assertion.c  improved_assertion.h  validator.c  validator.h
tools/reliability_mechanisms/single_design/: checkpoint_restart.c  checkpoint_restart.h  exception_handler.c  exception_handler.h  process_pair.c  process_pair.h
tools/reliability_mechanisms/single_design/error_detection/: cfc_monitor.c  cfc_monitor.h  checksum_validator.c  checksum_validator.h  data_diversity.c  data_diversity.h  data_property_checker.c  data_property_checker.h  deadline_monitor.c  deadline_monitor.h  improved_assertion.c  improved_assertion.h  input_validation.c  input_validation.h  redundant_execution.c  redundant_execution.h  system_behavior_monitor.c  system_behavior_monitor.h
